--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
     <li><a href="recipes/lasagna.html">Lasagna</a></li>
-
-
+    <li><a href="recipes/tacos.html">Carne Asada Tacos</a></li>
+    <li><a href="recipes/salad.html">Southwest Blackbean Salad</a></li>
     </ul>
 </body>
 </html>
