--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="lasagna.css">
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1><span style="color:white">Lasagna</span></h1>
     <img src="../images/lasagna.jpg" alt="A photo of a piece of lasagna served on a white plate with a fork" height="310" width="310">
-    <h3>Description</h3>
-<p>Imagine a warm, hearty lasagna with layers of tender pasta, rich tomato sauce, seasoned ground beef, and a creamy blend of ricotta and mozzarella cheese. </p>The top layer is perfectly golden and slightly crispy, creating a comforting dish that’s both simple and satisfying.
-    <h3>Ingredients</h3>
-<ul>
+    <h3 class="header">Description</h3>
+<p class="text">Imagine a warm, hearty lasagna with layers of tender pasta, rich tomato sauce, seasoned ground beef, and a creamy blend of ricotta and mozzarella cheese. </p> <p class="text">The top layer is perfectly golden and slightly crispy, creating a comforting dish that’s both simple and satisfying.</p>
+    <h3 class="header">Ingredients</h3>
+<ul class="text">
     <li>9 lasagna noodles</li>
     <li>1 pound ground beef</li>
     <li>24 ounces tomato sauce</li>
@@ -19,8 +20,8 @@
     <li>2 cups shredded mozerella cheese</li>
     <li>Salt and pepper to taste</li>
 </ul>    
-<h3>Steps</h3>
-<ol>
+<h3 class="header">Steps</h3>
+<ol class="text">
     <li>Preheat Oven: Preheat your oven to 375°F (190°C).</li>
     <li>Cook Noodles: Boil the lasagna noodles according to package instructions, then drain.</li>
     <li>Cook Beef: Brown the ground beef in a skillet, season with salt and pepper, then drain excess fat.</li>
